--- a/Source/DotSpatial.Plugins.Contourer/DotSpatial.Plugins.Contourer.csproj
+++ b/Source/DotSpatial.Plugins.Contourer/DotSpatial.Plugins.Contourer.csproj
@@ -10,9 +10,8 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DotSpatial.Plugins.Contourer</RootNamespace>
     <AssemblyName>DotSpatial.Plugins.Contourer</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkProfile></TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
     <SccLocalPath>SAK</SccLocalPath>
