--- a/Source/DotSpatial.Plugins.ScaleBar/DotSpatial.Plugins.ScaleBar.csproj
+++ b/Source/DotSpatial.Plugins.ScaleBar/DotSpatial.Plugins.ScaleBar.csproj
@@ -9,10 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DotSpatial.Plugins.ScaleBar</RootNamespace>
     <AssemblyName>DotSpatial.Plugins.ScaleBar</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
+    <TargetFrameworkProfile></TargetFrameworkProfile>
     <SccProjectName>SAK</SccProjectName>
     <SccLocalPath>SAK</SccLocalPath>
     <SccAuxPath>SAK</SccAuxPath>
