--- a/Source/DotSpatial.Plugins.Contourer/packages.config
+++ b/Source/DotSpatial.Plugins.Contourer/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DotSpatial.GeoAPI" version="1.7.4.3" targetFramework="net40-client" />
-  <package id="DotSpatial.NetTopologySuite" version="1.14.4" targetFramework="net40-Client" />
+  <package id="GeoDigital.GeoAPI" version="2.0.3" targetFramework="netstandard2.0" />
+  <package id="GeoDigital.DotSpatial.NetTopologySuite" version="2.0.3" targetFramework="netstandard2.0" />
   <package id="StyleCop.Analyzers" version="1.1.0-beta001" targetFramework="net40-client" developmentDependency="true" />
 </packages>
