--- a/Source/DotSpatial.Plugins.StatusBarImprovements/packages.config
+++ b/Source/DotSpatial.Plugins.StatusBarImprovements/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DotSpatial.GeoAPI" version="1.7.4.3" targetFramework="net40-client" />
+  <package id="GeoDigital.GeoAPI" version="2.0.3" targetFramework="netstandard2.0" />
   <package id="StyleCop.Analyzers" version="1.1.0-beta001" targetFramework="net40-client" developmentDependency="true" />
 </packages>
