--- a/Source/DotSpatial.WebControls/packages.config
+++ b/Source/DotSpatial.WebControls/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DotSpatial.GeoAPI" version="1.7.4.2" targetFramework="net40" />
+  <package id="GeoDigital.GeoAPI" version="2.0.3" targetFramework="netstandard2.0" />
 </packages>
