--- a/Source/Examples/SimpleApp/packages.config
+++ b/Source/Examples/SimpleApp/packages.config
@@ -4,9 +4,9 @@
   <package id="DotSpatial.Data" version="2.0.0-rc1" targetFramework="net40" />
   <package id="DotSpatial.Data.Forms" version="2.0.0-rc1" targetFramework="net40" />
   <package id="DotSpatial.Extensions" version="2.0.0-rc1" targetFramework="net40" />
-  <package id="DotSpatial.GeoAPI" version="1.7.4.3" targetFramework="net40" />
+  <package id="GeoDigital.GeoAPI" version="2.0.3" targetFramework="netstandard2.0" />
   <package id="DotSpatial.Modeling.Forms" version="2.0.0-rc1" targetFramework="net40" />
-  <package id="DotSpatial.NetTopologySuite" version="1.14.4" targetFramework="net40" />
+  <package id="GeoDigital.DotSpatial.NetTopologySuite" version="2.0.3" targetFramework="netstandard2.0" />
   <package id="DotSpatial.NTSExtension" version="2.0.0-rc1" targetFramework="net40" />
   <package id="DotSpatial.Projections" version="2.0.0-rc1" targetFramework="net40" />
   <package id="DotSpatial.Projections.Forms" version="2.0.0-rc1" targetFramework="net40" />
