--- a/Source/DotSpatial.WebControls/DotSpatial.WebControls.csproj
+++ b/Source/DotSpatial.WebControls/DotSpatial.WebControls.csproj
@@ -3,8 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>
-    </ProductVersion>
+    <ProductVersion></ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{4F1D51CC-8DE7-4D84-A415-A36A2EB3507B}</ProjectGuid>
     <OutputType>Library</OutputType>
