Port package refs from packages.config to new csproj files

--- a/Source/DemoMap/DemoMap.csproj
+++ b/Source/DemoMap/DemoMap.csproj
@@ -168,4 +168,7 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <ItemGroup xmlns="">
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta001" />
+  </ItemGroup>
 </Project>
