--- a/Source/DotSpatial.Compatibility/DotSpatial.Compatibility.csproj
+++ b/Source/DotSpatial.Compatibility/DotSpatial.Compatibility.csproj
@@ -1,163 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{56E70075-71E0-4FDA-BCA6-CF7581112354}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DotSpatial.Compatibility</RootNamespace>
-    <AssemblyName>DotSpatial.Compatibility</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile></TargetFrameworkProfile>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..</SolutionDir>
-    <RestorePackages>true</RestorePackages>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>..\bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>..\bin\Debug\DotSpatial.Compatibility.XML</DocumentationFile>
-    <CodeAnalysisRuleSet>..\DotSpatial.ruleset</CodeAnalysisRuleSet>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>..\bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>..\bin\Release\DotSpatial.Compatibility.xml</DocumentationFile>
-    <CodeAnalysisRuleSet>..\DotSpatial.ruleset</CodeAnalysisRuleSet>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
-  </PropertyGroup>
-  <PropertyGroup>
-    <AssemblyOriginatorKeyFile>DotSpatial.Compatibility.snk</AssemblyOriginatorKeyFile>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <GenerateAssemblyCompanyAttribute>False</GenerateAssemblyCompanyAttribute>
+    <GenerateAssemblyConfigurationAttribute>False</GenerateAssemblyConfigurationAttribute>
+    <GenerateAssemblyProductAttribute>False</GenerateAssemblyProductAttribute>
+    <GenerateAssemblyTitleAttribute>False</GenerateAssemblyTitleAttribute>
+    <GenerateAssemblyVersionAttribute>False</GenerateAssemblyVersionAttribute>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DotSpatial.GeoAPI, Version=1.7.4.0, Culture=neutral, PublicKeyToken=a1a0da7def465678, processorArchitecture=MSIL">
-      <HintPath>..\packages\DotSpatial.GeoAPI.1.7.4.3\lib\net40-client\DotSpatial.GeoAPI.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="DotSpatial.NetTopologySuite, Version=1.14.4.0, Culture=neutral, PublicKeyToken=f580a05016ebada1, processorArchitecture=MSIL">
-      <HintPath>..\packages\DotSpatial.NetTopologySuite.1.14.4\lib\net40-client\DotSpatial.NetTopologySuite.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
+    <PackageReference Include="GeoDigital.GeoAPI" Version="2.0.3" />
+    <PackageReference Include="GeoDigital.DotSpatial.NetTopologySuite" Version="2.0.3" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta001" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="..\AssemblyInfoShared.cs">
-      <Link>Properties\AssemblyInfoShared.cs</Link>
-    </Compile>
-    <Compile Include="AppInfo.cs" />
-    <Compile Include="ClickLocation.cs" />
-    <Compile Include="CursorMode.cs" />
-    <Compile Include="HJustification.cs" />
-    <Compile Include="IAppInfo.cs" />
-    <Compile Include="IComboBoxItem.cs" />
-    <Compile Include="IdentifiedShapes.cs" />
-    <Compile Include="IDraw.cs" />
-    <Compile Include="IIdentifiedLayers.cs" />
-    <Compile Include="ILayerOld.cs" />
-    <Compile Include="ILayers.cs" />
-    <Compile Include="IMapWin.cs" />
-    <Compile Include="IMenuItem.cs" />
-    <Compile Include="IMenus.cs" />
-    <Compile Include="IPlugin.cs" />
-    <Compile Include="IPlugins.cs" />
-    <Compile Include="IPreviewMap.cs" />
-    <Compile Include="IProject.cs" />
-    <Compile Include="IReports.cs" />
-    <Compile Include="ISelectedShape.cs" />
-    <Compile Include="ISelectInfo.cs" />
-    <Compile Include="IStatusBar.cs" />
-    <Compile Include="IStatusBarItem.cs" />
-    <Compile Include="IToolbar.cs" />
-    <Compile Include="IToolbarButton.cs" />
-    <Compile Include="IUIPanel.cs" />
-    <Compile Include="IUserInteraction.cs" />
-    <Compile Include="IViewOld.cs" />
-    <Compile Include="LayerType.cs" />
-    <Compile Include="LegacyPluginManager.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="LegacyPluginManager.designer.cs">
-      <DependentUpon>LegacyPluginManager.cs</DependentUpon>
-    </Compile>
-    <Compile Include="MapCursorMode.cs" />
-    <Compile Include="MapWin.cs" />
-    <Compile Include="MenuItem.cs" />
-    <Compile Include="Menus.cs" />
-    <Compile Include="PointType.cs" />
-    <Compile Include="PreviewExtentMode.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReferenceType.cs" />
-    <Compile Include="SelectMode.cs" />
-    <Compile Include="SpatialDockStyle.cs" />
-    <Compile Include="Stipple.cs" />
-    <Compile Include="UnitsOfMeasure.cs" />
-    <Compile Include="UserInteraction.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\DotSpatial.Controls\DotSpatial.Controls.csproj">
-      <Project>{01A845C6-D391-4258-81B0-C6ABF23D3364}</Project>
-      <Name>DotSpatial.Controls</Name>
-      <Private>False</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\DotSpatial.Data\DotSpatial.Data.csproj">
-      <Project>{C1018695-3401-47A9-B195-ABD3A20C2489}</Project>
-      <Name>DotSpatial.Data</Name>
-      <Private>False</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\DotSpatial.Symbology\DotSpatial.Symbology.csproj">
-      <Project>{21C1D7A7-E8E5-4590-A921-2287AD43CB98}</Project>
-      <Name>DotSpatial.Symbology</Name>
-      <Private>False</Private>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <AdditionalFiles Include="..\stylecop.json">
-      <Link>stylecop.json</Link>
-    </AdditionalFiles>
-    <None Include="app.config" />
-    <None Include="DotSpatial.Compatibility.snk" />
-    <None Include="DotSpatial.Compatibility.nuspec">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.0-beta001\analyzers\dotnet\cs\Newtonsoft.Json.dll" />
-    <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.0-beta001\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
-    <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.0-beta001\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Readme.txt" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
