--- a/Source/DotSpatial.Plugins.ExtensionManager.Tests/DotSpatial.Plugins.ExtensionManager.Tests.csproj
+++ b/Source/DotSpatial.Plugins.ExtensionManager.Tests/DotSpatial.Plugins.ExtensionManager.Tests.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="NUnit" Version="2.6.3" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta001" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DotSpatial.Controls\DotSpatial.Controls.csproj" />
+    <ProjectReference Include="..\DotSpatial.Plugins.ExtensionManager\DotSpatial.Plugins.ExtensionManager.csproj" />
+  </ItemGroup>
 </Project>
