--- a/Source/DotSpatial.Plugins.MapWindowProjectFileCompatibility.Tests/DotSpatial.Plugins.MapWindowProjectFileCompatibility.Tests.csproj
+++ b/Source/DotSpatial.Plugins.MapWindowProjectFileCompatibility.Tests/DotSpatial.Plugins.MapWindowProjectFileCompatibility.Tests.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="NUnit" Version="2.6.3" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta001" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DotSpatial.Controls\DotSpatial.Controls.csproj" />
+    <ProjectReference Include="..\DotSpatial.Data\DotSpatial.Data.csproj" />
+    <ProjectReference Include="..\DotSpatial.Plugins.MapWindowProjectFileCompatibility\DotSpatial.Plugins.MapWindowProjectFileCompatibility.csproj" />
+    <ProjectReference Include="..\DotSpatial.Symbology\DotSpatial.Symbology.csproj" />
+  </ItemGroup>
 </Project>
