--- a/Source/DotSpatial.Positioning.Forms/DotSpatial.Positioning.Forms.csproj
+++ b/Source/DotSpatial.Positioning.Forms/DotSpatial.Positioning.Forms.csproj
@@ -8,4 +8,7 @@
     <GenerateAssemblyTitleAttribute>False</GenerateAssemblyTitleAttribute>
     <GenerateAssemblyVersionAttribute>False</GenerateAssemblyVersionAttribute>
   </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DotSpatial.Positioning\DotSpatial.Positioning.csproj" />
+  </ItemGroup>
 </Project>
