--- a/Source/DotSpatial.Data.Forms/DotSpatial.Data.Forms.csproj
+++ b/Source/DotSpatial.Data.Forms/DotSpatial.Data.Forms.csproj
@@ -13,4 +13,10 @@
     <PackageReference Include="GeoDigital.DotSpatial.NetTopologySuite" Version="2.0.3" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta001" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DotSpatial.Data\DotSpatial.Data.csproj" />
+    <ProjectReference Include="..\DotSpatial.Projections.Forms\DotSpatial.Projections.Forms.csproj" />
+    <ProjectReference Include="..\DotSpatial.Serialization\DotSpatial.Serialization.csproj" />
+    <ProjectReference Include="..\DotSpatial.Symbology\DotSpatial.Symbology.csproj" />
+  </ItemGroup>
 </Project>
