--- a/Source/DotSpatial.Plugins.LiDAR/DotSpatial.Plugins.LiDAR.csproj
+++ b/Source/DotSpatial.Plugins.LiDAR/DotSpatial.Plugins.LiDAR.csproj
@@ -12,4 +12,12 @@
     <PackageReference Include="GeoDigital.GeoAPI" Version="2.0.3" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta001" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DotSpatial.Controls\DotSpatial.Controls.csproj" />
+    <ProjectReference Include="..\DotSpatial.Data\DotSpatial.Data.csproj" />
+    <ProjectReference Include="..\DotSpatial.Extensions\DotSpatial.Extensions.csproj" />
+    <ProjectReference Include="..\DotSpatial.NTSExtension\DotSpatial.NTSExtension.csproj" />
+    <ProjectReference Include="..\DotSpatial.Projections\DotSpatial.Projections.csproj" />
+    <ProjectReference Include="..\DotSpatial.Symbology\DotSpatial.Symbology.csproj" />
+  </ItemGroup>
 </Project>
