--- a/Source/DotSpatial.Plugins.MapWindowProjectFileCompatibility/DotSpatial.Plugins.MapWindowProjectFileCompatibility.csproj
+++ b/Source/DotSpatial.Plugins.MapWindowProjectFileCompatibility/DotSpatial.Plugins.MapWindowProjectFileCompatibility.csproj
@@ -12,4 +12,11 @@
     <PackageReference Include="DotNetZip" Version="1.9.8" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta001" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DotSpatial.Controls\DotSpatial.Controls.csproj" />
+    <ProjectReference Include="..\DotSpatial.Data\DotSpatial.Data.csproj" />
+    <ProjectReference Include="..\DotSpatial.Extensions\DotSpatial.Extensions.csproj" />
+    <ProjectReference Include="..\DotSpatial.Serialization\DotSpatial.Serialization.csproj" />
+    <ProjectReference Include="..\DotSpatial.Symbology\DotSpatial.Symbology.csproj" />
+  </ItemGroup>
 </Project>
