--- a/Source/DotSpatial.Projections.Forms/DotSpatial.Projections.Forms.csproj
+++ b/Source/DotSpatial.Projections.Forms/DotSpatial.Projections.Forms.csproj
@@ -11,4 +11,7 @@
   <ItemGroup>
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta001" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DotSpatial.Projections\DotSpatial.Projections.csproj" />
+  </ItemGroup>
 </Project>
