--- a/Source/DotSpatial.Serialization.Tests/DotSpatial.Serialization.Tests.csproj
+++ b/Source/DotSpatial.Serialization.Tests/DotSpatial.Serialization.Tests.csproj
@@ -12,4 +12,11 @@
     <PackageReference Include="NUnit" Version="2.6.3" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta001" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DotSpatial.Controls\DotSpatial.Controls.csproj" />
+    <ProjectReference Include="..\DotSpatial.Data\DotSpatial.Data.csproj" />
+    <ProjectReference Include="..\DotSpatial.Serialization\DotSpatial.Serialization.csproj" />
+    <ProjectReference Include="..\DotSpatial.Symbology\DotSpatial.Symbology.csproj" />
+    <ProjectReference Include="..\DotSpatial.Tests.Common\DotSpatial.Tests.Common.csproj" />
+  </ItemGroup>
 </Project>
