--- a/Source/DotSpatial.Tools.Tests/DotSpatial.Tools.Tests.csproj
+++ b/Source/DotSpatial.Tools.Tests/DotSpatial.Tools.Tests.csproj
@@ -14,4 +14,12 @@
     <PackageReference Include="NUnit" Version="2.6.3" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta001" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DotSpatial.Data.Rasters.GdalExtension\DotSpatial.Data.Rasters.GdalExtension.csproj" />
+    <ProjectReference Include="..\DotSpatial.Data\DotSpatial.Data.csproj" />
+    <ProjectReference Include="..\DotSpatial.Extensions\DotSpatial.Extensions.csproj" />
+    <ProjectReference Include="..\DotSpatial.Modeling.Forms\DotSpatial.Modeling.Forms.csproj" />
+    <ProjectReference Include="..\DotSpatial.Tests.Common\DotSpatial.Tests.Common.csproj" />
+    <ProjectReference Include="..\DotSpatial.Tools\DotSpatial.Tools.csproj" />
+  </ItemGroup>
 </Project>
