--- a/Source/DotSpatial.Tools/DotSpatial.Tools.csproj
+++ b/Source/DotSpatial.Tools/DotSpatial.Tools.csproj
@@ -13,4 +13,11 @@
     <PackageReference Include="GeoDigital.DotSpatial.NetTopologySuite" Version="2.0.3" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta001" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DotSpatial.Analysis\DotSpatial.Analysis.csproj" />
+    <ProjectReference Include="..\DotSpatial.Data\DotSpatial.Data.csproj" />
+    <ProjectReference Include="..\DotSpatial.Extensions\DotSpatial.Extensions.csproj" />
+    <ProjectReference Include="..\DotSpatial.Modeling.Forms\DotSpatial.Modeling.Forms.csproj" />
+    <ProjectReference Include="..\DotSpatial.Projections\DotSpatial.Projections.csproj" />
+  </ItemGroup>
 </Project>
