DotSpatial.Positioning builds

--- a/Source/DotSpatial.Positioning/DotSpatial.Positioning.csproj
+++ b/Source/DotSpatial.Positioning/DotSpatial.Positioning.csproj
@@ -8,4 +8,10 @@
     <GenerateAssemblyTitleAttribute>False</GenerateAssemblyTitleAttribute>
     <GenerateAssemblyVersionAttribute>False</GenerateAssemblyVersionAttribute>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Win32.Registry" Version="4.6.0" />
+    <PackageReference Include="System.ComponentModel.Composition" Version="4.6.0" />
+    <PackageReference Include="System.Drawing.Common" Version="4.6.0" />
+    <PackageReference Include="System.IO.Ports" Version="4.6.0" />
+  </ItemGroup>
 </Project>
