--- a/Source/DotSpatial.Data/DotSpatial.Data.csproj
+++ b/Source/DotSpatial.Data/DotSpatial.Data.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="GeoDigital.GeoAPI" Version="2.0.3" />
     <PackageReference Include="GeoDigital.DotSpatial.NetTopologySuite" Version="2.0.3" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta001" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.6.0" />
+    <PackageReference Include="System.ComponentModel.Composition" Version="4.6.0" />
     <PackageReference Include="System.Drawing.Common" Version="4.6.0" />
   </ItemGroup>
   <ItemGroup>
